1. Collection API Улучшения[#199556]