@@ -12,18 +12,18 @@ public class DepartmentsTest {
 
     @Test
     public void whenAsc() {
-        List<String> input = Arrays.asList("k1/sk1", "k1/sk2", "k1/sk1/ssk1",
+        List<String> input = List.of("k1/sk1", "k1/sk2", "k1/sk1/ssk1",
                 "k1/sk1/ssk2", "k2", "k2/sk1/ssk1", "k2/sk1/ssk2");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1",
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1",
                 "k1/sk1/ssk2", "k1/sk2", "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2");
         assertThat(Departments.fillGaps(input), is(expect));
     }
 
     @Test
     public void whenDesc() {
-        List<String> input = Arrays.asList("k1/sk1", "k1/sk2", "k1/sk1/ssk1",
+        List<String> input = List.of("k1/sk1", "k1/sk2", "k1/sk1/ssk1",
                 "k1/sk1/ssk2", "k2", "k2/sk1/ssk1", "k2/sk1/ssk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk2",
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk2",
                 "k2/sk1/ssk1", "k1", "k1/sk2", "k1/sk1", "k1/sk1/ssk2", "k1/sk1/ssk1");
         assertThat(Departments.sortDesc(Departments.fillGaps(input)), is(expect));
     }
